migration: migrate entity owner/effect/recipe api to mc26.2 batch2
recipe access via getRecipes filter, color collection dyes, effect renames,
restriction hooks removal, interact signature

Co-Authored-By: Claude <noreply@anthropic.com>